@@ -29,6 +29,9 @@ function version() {
 * @return string
 */
 function idf_unescape($idf) {
+	if (!preg_match('~^[`\'"]~', $idf)) {
+		return $idf;
+	}
 	$last = substr($idf, -1);
 	return str_replace($last . $last, $last, substr($idf, 1, -1));
 }
