@@ -1,2 +1,2 @@
 <?php
-$VERSION = "4.8.1-dev";
+$VERSION = "4.8.1";
