@@ -89,6 +89,8 @@ class AdminerPlugin extends Adminer {
 	}
 
 	function editRowPrint($table, $fields, $row, $update) {
+		$args = func_get_args();
+		return $this->_appendPlugin(__FUNCTION__, $args);
 	}
 
 	function editFunctions($field) {
